don't serve or git backup versions of config file

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-<FilesMatch "jv-config\.json$">
+# hide this file
+# also things like jv-config.json~ and #jv-config.json#
+<FilesMatch "jv-config\.json">
 Order Allow,Deny
 Deny from all
 </FilesMatch>
